--- a/pybo/templates/base.html
+++ b/pybo/templates/base.html
@@ -11,7 +11,7 @@
     <!-- pybo CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
-    <title>후후</title>
+    <title>안녕하세요</title>
 </head>
 <body>
 {% include "navbar.html" %}
