--- a/pybo/templates/question/question_list.html
+++ b/pybo/templates/question/question_list.html
@@ -3,7 +3,25 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container my-3">
-    <div class="row justify-content-between my-3">
+
+</div>
+<div class="container mt-3">
+    <div class="row">
+
+        <div class="col-sm-12 col-md-3 col-lg-2 p-2">
+            <!--<nav id="sidebar" class="border-top border-secondary">
+                <div class="list-group">
+                    <a class="rounded-0 list-group-item list-group-item-action list-group-item-light active"
+                       href="http://localhost:5000/question/list/free/">자유 게시판</a>
+                    <a class="rounded-0 list-group-item list-group-item-action list-group-item-light active"
+                       href="http://localhost:5000/question/list/qna/">질문 답변 게시판</a>
+                </div>
+            </nav>
+            -->
+        </div>
+    <div class="col-sm-12 col-md-9 col-lg-10 p-2">
+        <div id="content" class="border-secondary">
+            <div class="row justify-content-between mb-3">
         <div class="col-2">
             <select class="form-control so">
                 <option value="recent" {% if so=='recent' %}selected{% endif %}>최신순</option>
@@ -21,7 +39,7 @@
             </div>
         </div>
     </div>
-    <table class="table">
+        <table class="table">
         <thead>
         <tr class="thead-dark">
             <th>번호</th>
@@ -67,6 +85,8 @@
         {% endif %}
         </tbody>
     </table>
+
+
     <ul class="pagination justify-content-center">
         <!-- 이전페이지 -->
         {% if question_list.has_prev %}
@@ -108,13 +128,15 @@
     </ul>
     <a href="{{url_for('question.create')}}" class="btn btn-outline-primary">질문 등록하기</a>
 </div>
+         </div>
+    </div>
 
 <form id="searchForm" method="get" action="{{ url_for('question._list') }}">
     <input type="hidden" id="kw" name="kw" value="{{ kw or '' }}">
     <input type="hidden" id="page" name="page" value="{{ page }}">
     <input type="hidden" id="so" name="so" value="{{ so }}">
 </form>
-
+</div>
 {% endblock %}
 
 {% block script %}
