--- a/pybo/templates/navbar.html
+++ b/pybo/templates/navbar.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-    <a class="navbar-brand" href="{{ url_for('main.index') }}">Pybo</a>
+    <a class="navbar-brand" href="{{ url_for('main.index') }}">Hello~!</a>
     <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
