질문글 비밀번호 글자수 제한설정

--- a/pybo/templates/question/question_detail.html
+++ b/pybo/templates/question/question_detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>후후</title>
+    <title>Hello~!</title>
 </head>
 <body>
 <link rel="stylesheet" href="{{url_for('static', filename='bootstrap.min.css') }}">
