--- a/pybo/templates/question/question_form.html
+++ b/pybo/templates/question/question_form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>후후</title>
+    <title>Hello~!</title>
 </head>
 {% extends 'base.html' %}
 {% block content %}
