--- a/pybo/templates/question/question_list.html
+++ b/pybo/templates/question/question_list.html
@@ -1,4 +1,4 @@
-
+<title>Hello~!</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
 {% extends 'base.html' %}
 {% block content %}
