--- a/pybo/templates/question/question_list.html
+++ b/pybo/templates/question/question_list.html
@@ -7,9 +7,8 @@
 </div>
 <div class="container mt-3">
     <div class="row">
-
-        <div class="col-sm-12 col-md-3 col-lg-2 p-2">
-            <!--<nav id="sidebar" class="border-top border-secondary">
+        <!--<div class="col-sm-12 col-md-3 col-lg-2 p-2">
+            <nav id="sidebar" class="border-top border-secondary">
                 <div class="list-group">
                     <a class="rounded-0 list-group-item list-group-item-action list-group-item-light active"
                        href="http://localhost:5000/question/list/free/">자유 게시판</a>
@@ -17,8 +16,7 @@
                        href="http://localhost:5000/question/list/qna/">질문 답변 게시판</a>
                 </div>
             </nav>
-            -->
-        </div>
+        </div>-->
     <div class="col-sm-12 col-md-9 col-lg-10 p-2">
         <div id="content" class="border-secondary">
             <div class="row justify-content-between mb-3">
