--- a/pybo/templates/navbar.html
+++ b/pybo/templates/navbar.html
@@ -5,7 +5,7 @@
     <title>Hello~!</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom">
     <a class="navbar-brand" href="{{ url_for('main.index') }}">Hello~!</a>
     <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
