--- a/pybo/templates/question/question_list.html
+++ b/pybo/templates/question/question_list.html
@@ -51,8 +51,8 @@
         {% if question_list %}
         {% for question in question_list.items %}
         <tr>
-            <td>{{question_list.total - ((question_list.page-1)*question_list.per_page) - loop.index0}}</td>
-            <td>
+            <td width="8%">{{question_list.total - ((question_list.page-1)*question_list.per_page) - loop.index0}}</td>
+            <td width="10%">
                 {% if question.voter|length > 0 %}
                 <span class="badge badge-warning px-2 py-1">
                     {{question.voter|length}}
@@ -60,7 +60,7 @@
                 {% endif %}
             </td>
 
-            <td>
+            <td width="40%">
                 <a href="{{ url_for('question.detail', question_id=question.id) }}">{{ question.subject }}</a>
                 {% if question.answer_set|length > 0 %}
                 <span class="text-danger small ml-2">{{ [question.answer_set|length] }}</span>
@@ -124,7 +124,7 @@
         </li>
         {% endif %}
     </ul>
-    <a href="{{url_for('question.create',category_name=category.name)}}" class="btn btn-outline-primary">질문 등록하기</a>
+    <a href="{{url_for('question.create',category_name=category.name)}}" class="btn btn-outline-primary">글 작성하기</a>
 </div>
          </div>
     </div>
