--- a/pybo/templates/question/no_login_password.html
+++ b/pybo/templates/question/no_login_password.html
@@ -25,7 +25,7 @@
             <input type="text" class="form-control" name="password_check" id="password_check" value="{{ form.password_check.data or '' }}">
         </div>
 
-        <button type="submit" name="modify" class="btn btn-outline-primary">확인</button>
+        <button type="submit" class="btn btn-outline-primary">확인</button>
     </form>
 </div>
 {% endblock %}
