--- a/pybo/templates/question/question_detail.html
+++ b/pybo/templates/question/question_detail.html
@@ -47,7 +47,7 @@
                     </div>
                     </div>
                     {% if g.user %}
-                    {% if g.user == question.user or g.user.roles==1 %}
+                    {% if g.user == question.user %}
                     <div class="my-3">
                         <a href="{{ url_for('question.modify', question_id=question.id) }}"
                             class="btn btn-sm btn-outline-secondary">수정</a>
