--- a/pybo/templates/question/question_list.html
+++ b/pybo/templates/question/question_list.html
@@ -7,16 +7,16 @@
 </div>
 <div class="container mt-3">
     <div class="row">
-        <!--<div class="col-sm-12 col-md-3 col-lg-2 p-2">
+        <div class="col-sm-12 col-md-3 col-lg-2 p-2">
             <nav id="sidebar" class="border-top border-secondary">
                 <div class="list-group">
                     <a class="rounded-0 list-group-item list-group-item-action list-group-item-light active"
-                       href="http://localhost:5000/question/list/free/">자유 게시판</a>
+                       href="http://localhost:5000/question/list/qna">질문 게시판</a>
                     <a class="rounded-0 list-group-item list-group-item-action list-group-item-light active"
-                       href="http://localhost:5000/question/list/qna/">질문 답변 게시판</a>
+                       href="http://localhost:5000/question/list/free">자유 게시판</a>
                 </div>
             </nav>
-        </div>-->
+        </div>
     <div class="col-sm-12 col-md-9 col-lg-10 p-2">
         <div id="content" class="border-secondary">
             <div class="row justify-content-between mb-3">
@@ -39,7 +39,7 @@
     </div>
         <table class="table">
         <thead>
-        <tr class="thead-dark">
+        <tr class="table-primary">
             <th>번호</th>
             <th>추천수</th>
             <th>제목</th>
@@ -51,8 +51,8 @@
         {% if question_list %}
         {% for question in question_list.items %}
         <tr>
-            <td>{{question_list.total - ((question_list.page-1)*question_list.per_page) - loop.index0}}</td>
-            <td>
+            <td width="8%">{{question_list.total - ((question_list.page-1)*question_list.per_page) - loop.index0}}</td>
+            <td width="10%">
                 {% if question.voter|length > 0 %}
                 <span class="badge badge-warning px-2 py-1">
                     {{question.voter|length}}
@@ -60,7 +60,7 @@
                 {% endif %}
             </td>
 
-            <td>
+            <td width="40%">
                 <a href="{{ url_for('question.detail', question_id=question.id) }}">{{ question.subject }}</a>
                 {% if question.answer_set|length > 0 %}
                 <span class="text-danger small ml-2">{{ [question.answer_set|length] }}</span>
@@ -124,12 +124,12 @@
         </li>
         {% endif %}
     </ul>
-    <a href="{{url_for('question.create')}}" class="btn btn-outline-primary">질문 등록하기</a>
+    <a href="{{url_for('question.create',category_name=category.name)}}" class="btn btn-outline-primary">글 작성하기</a>
 </div>
          </div>
     </div>
 
-<form id="searchForm" method="get" action="{{ url_for('question._list') }}">
+<form id="searchForm" method="get" action="{{ url_for('question._list',category_name=category.name) }}">
     <input type="hidden" id="kw" name="kw" value="{{ kw or '' }}">
     <input type="hidden" id="page" name="page" value="{{ page }}">
     <input type="hidden" id="so" name="so" value="{{ so }}">
